<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
        >
    <TextView android:id="@+id/url_title"
              android:text="@string/url_title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
            />
    <EditText android:id="@+id/url"
              android:singleLine="true"
              android:inputType="textUri"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
            />
    <LinearLayout android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
            >
        <Button android:id="@+id/test_connection_button"
                android:text="@string/test_connection_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        <Button android:id="@+id/accept_button"
                android:text="@string/accept_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
</LinearLayout>