<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
    <Button android:id="@+id/returnButton"
            android:text="@string/return_button"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="168sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/returnButton"
                android:layout_alignParentTop="true"
            >
        <TableLayout android:id="@+id/result_items_layout"
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:shrinkColumns="*"
                     android:stretchColumns="2"
                     android:clickable="false"
                     android:layout_weight="1"
                >
            <TableRow android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="2dip"
                      android:paddingBottom="2dip"
                      android:paddingLeft="+5dp"
                      android:clickable="false"
                    >
                <TextView android:id="@+id/name_title"
                          android:text="@string/name_title"
                          android:textColor="@color/title_color"
                          android:singleLine="true"
                          android:minWidth="100dp"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingRight="15dp"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                        />
                <TextView android:id="@+id/type_title"
                          android:text="@string/type_title"
                          android:singleLine="true"
                          android:textColor="@color/title_color"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingRight="15dp"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                        />
                <TextView android:id="@+id/value_title"
                          android:text="@string/value_title"
                          android:singleLine="true"
                          android:textColor="@color/title_color"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                        />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
